# cired.digital

./: pyproject.toml
src/engine/smoke-tests/: r2r_test_utils.py
src/engine/smoke_tests/: LLM_swap.py  __init__.py  hello_r2r.py  r2r_test_utils.py
src/frontend/: content-manager.js  index.html  main.css  query-processor.js
tests/analytics/: test_feedback_server.py
tests/engine/: test_smoke_tests.py
tests/intake/: test_config.py  test_download.py  test_push.py  test_query.py  test_verify.py
