# pyproject.toml — Project configuration for cired.digital project
# Maintainer: Minh Ha-Duong <minh.ha-duong@cnrs.fr>
#
# Python 3.11+, using:
# - Ruff for linting, formatting, and complexity checks
#   See: https://docs.astral.sh/ruff/
# - Pytest for testing
#
# This file defines project metadata, dependencies, and tool configurations.
# It is the single source of truth for development standards.
#
# Best practices:
# - Keep all tool configs here for consistency (e.g. Ruff, Pytest)
# - Run `ruff check .` regularly, or set up a pre-commit hook
# - Format code with `ruff format` (no need for Black)

[project]
name = "cired-chatbot"
version = "0.0.1"
description = "Scripts and data for a chatbot with CIRED publications"
authors = [
  { name="Minh Ha-Duong", email="minh.ha-duong@cnrs.fr" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "datasets",
  "requests",
]

# development‑only dependencies
[project.optional-dependencies]
dev = [
  "ruff>=0.0.283,<1.0.0",
  "pytest>=7.0,<8.0",
  "pytest-asyncio>=0.21.0",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90", "D", "UP"]
ignore = ["E501", "D203", "D212"]                # e.g. ignore line‑length

[tool.ruff.lint.mccabe]
max-complexity = 10
